syntax = "proto3";
import "messages.proto";

package SocialService.api.social;

option go_package = "proto/pkg/api/social;social";

// Сервис отношений
service SocialService {

  // Удаление пользователя из друзей
  rpc RemoveFriend(RemoveFriendRequest) returns (RemoveFriendResponse) {}

  // Получение списка друзей
  rpc ListFriends(ListFriendsRequest) returns (ListFriendsResponse) {}

  // отправляет запрос на добавление в друзья другому пользователю
  // возвращает созданный запрос
  rpc SendFriendRequest(SendFriendRequestRequest) returns (SendFriendRequestResponse) {}

  // получает список запросов в друзья, пользователя
  rpc ListRequests(ListRequestsRequest) returns (ListRequestsResponse) {}

  // принимает входящую заявку в друзья.
  rpc AcceptFriendRequest(AcceptFriendRequestRequest) returns (AcceptFriendRequestResponse) {}

  // отклоняет входящую заявку в друзья.
  rpc DeclineFriendRequest(DeclineFriendRequestRequest) returns (DeclineFriendRequestResponse) {}
}