syntax = "proto3";

package SocialService.api.social;

option go_package = "proto/pkg/api/v1/social;social";

// Запрос на удаление пользователя из друзей
message RemoveFriendRequest {
  string user_id = 1;
}

message RemoveFriendResponse {}

// Запрос на список друзей
message ListFriendsRequest {
  string user_id = 1;
  int32 limit = 2;
  optional string cursor = 3;
}

// Ответ на список друзей
message ListFriendsResponse {
  repeated string friend_user_ids = 1;
  optional string next_cursor = 2;
}

// запрос на отправку в друзья
message SendFriendRequest {
  string user_id = 1;
}

// просмотр одной заявки в друзья
message FriendRequest {
  string request_id = 1;
  FriendRequestStatus status = 2;
}

// запрос на получение списка заявок в друзья
message ListRequestsRequest {
  string user_id = 1;
}


// ответ, содержащий список заявок в друзья
message ListRequestsResponse {
  repeated FriendRequest requests = 1;
}

// добавляем все свои энамы если они вам нужны по задаче
enum FriendRequestStatus {
  PENDING = 0;
  ACCEPTED = 1;
  DECLINED = 2;
}

// запрос на принятие входящей заявки в друзья.
message AcceptFriendRequestRequest {
  string request_id = 1;
}

// Ответ на принятие входящей заявки в друзья.
message AcceptFriendRequestResponse {
  string request_id = 1;
  FriendRequestStatus status = 2;
}

// запрос на отклонение входящей заявки в друзья.
message DeclineFriendRequestRequest {
  string request_id = 1;
}

// Ответ на отклонение входящей заявки в друзья.
message DeclineFriendRequestResponse {
  string request_id = 1;
  FriendRequestStatus status = 2;
}

// запрос на отправку в друзья
message SendFriendRequestRequest {
  string user_id = 1;
}

// Ответ на отправки запроса в друзья
message SendFriendRequestResponse {
  FriendRequest friend_request = 1;
}

